src/save/snapshots/jiq__save__save_render__save_render_tests__snapshot_closed_state_renders_nothing.snap
---
source: src/save/save_render_tests.rs
expression: out
---
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
