src/save/snapshots/jiq__save__save_render__save_render_tests__snapshot_enter_filename_narrow_terminal.snap
---
source: src/save/save_render_tests.rs
expression: out
---
"╭ Save Result to file ───────────────────────────╮"
"│                                                │"
"│  Path:                                         │"
"│  ╭──────────────────────────────────────────╮  │"
"│  │/tmp/jiq-x.json                           │  │"
"│  ╰──────────────────────────────────────────╯  │"
"│  → /tmp/jiq-x.json                             │"
"│                                                │"
"│                                                │"
"╰─────────── Enter Save • Esc Cancel ────────────╯"
