src/save/snapshots/jiq__save__save_render__save_render_tests__snapshot_enter_filename_user_typed_absolute.snap
---
source: src/save/save_render_tests.rs
expression: out
---
"                                                                                "
"        ╭ Save Result to file ─────────────────────────────────────────╮        "
"        │                                                              │        "
"        │  Path:                                                       │        "
"        │  ╭────────────────────────────────────────────────────────╮  │        "
"        │  │/tmp/jiq-custom.json                                    │  │        "
"        │  ╰────────────────────────────────────────────────────────╯  │        "
"        │  → /tmp/jiq-custom.json                                      │        "
"        │                                                              │        "
"        │                                                              │        "
"        ╰────────────────── Enter Save • Esc Cancel ───────────────────╯        "
"                                                                                "
