src/save/snapshots/jiq__save__save_render__save_render_tests__snapshot_preview_shows_error_for_empty_input.snap
---
source: src/save/save_render_tests.rs
expression: out
---
"                                                                                "
"        ╭ Save Result to file ─────────────────────────────────────────╮        "
"        │                                                              │        "
"        │  Path:                                                       │        "
"        │  ╭────────────────────────────────────────────────────────╮  │        "
"        │  │                                                        │  │        "
"        │  ╰────────────────────────────────────────────────────────╯  │        "
"        │  ✕ filename is empty                                         │        "
"        │                                                              │        "
"        │                                                              │        "
"        ╰────────────────── Enter Save • Esc Cancel ───────────────────╯        "
"                                                                                "
