src/save/snapshots/jiq__save__save_render__save_render_tests__snapshot_preview_shows_error_for_unset_env_var.snap
---
source: src/save/save_render_tests.rs
expression: out
---
"                                                                                "
"        ╭ Save Result to file ─────────────────────────────────────────╮        "
"        │                                                              │        "
"        │  Path:                                                       │        "
"        │  ╭────────────────────────────────────────────────────────╮  │        "
"        │  │$JIQ_RENDER_TEST_MISSING/x.json                         │  │        "
"        │  ╰────────────────────────────────────────────────────────╯  │        "
"        │  ✕ env var JIQ_RENDER_TEST_MISSING not set                   │        "
"        │                                                              │        "
"        │                                                              │        "
"        ╰────────────────── Enter Save • Esc Cancel ───────────────────╯        "
"                                                                                "
