src/save/snapshots/jiq__save__save_render__save_render_tests__snapshot_preview_shows_save_label_when_file_does_not_exist.snap
---
source: src/save/save_render_tests.rs
expression: out
---
"                                                                                "
"        ╭ Save Result to file ─────────────────────────────────────────╮        "
"        │                                                              │        "
"        │  Path:                                                       │        "
"        │  ╭────────────────────────────────────────────────────────╮  │        "
"        │  │/tmp/jiq-nonexistent-snapshot-test-999.json             │  │        "
"        │  ╰────────────────────────────────────────────────────────╯  │        "
"        │  → /tmp/jiq-nonexistent-snapshot-test-999.json               │        "
"        │                                                              │        "
"        │                                                              │        "
"        ╰────────────────── Enter Save • Esc Cancel ───────────────────╯        "
"                                                                                "
